--- a/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/static/ProjectWebMinimarketApp/css/gestion.css
+++ b/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/static/ProjectWebMinimarketApp/css/gestion.css
@@ -2,7 +2,17 @@
 .Image-Width{
   width: 50%;
 }
+.Author-blog{
+  text-align: left;
+  font-size: 0.8em;
+}
 
+.categories-blog{
+  width: 75%;
+  margin: auto;
+  text-align: center;
+  color: white;
+}
 body {
   font-family: 'Lora';
   background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/MainBackG.jpg");
