--- a/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/templates/ProjectWebMinimarketApp/base.html
+++ b/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/templates/ProjectWebMinimarketApp/base.html
@@ -51,7 +51,7 @@
             <a class="nav-link text-uppercase text-expanded" href="{% url 'Contact' %}">Contact</a>
           </li>
           <li class="nav-item px-lg-4 {% if request.path == '/Blog/'%} active {% endif %}">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Blog' %}">Blog</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'BlogApp' %}">Blog</a>
           </li>
          
         </ul>
