--- a/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/templates/ProjectWebMinimarketApp/base.html
+++ b/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/templates/ProjectWebMinimarketApp/base.html
@@ -47,7 +47,7 @@
           <li class="nav-item px-lg-4 {% if request.path == '/Store/'%} active {% endif %}">
             <a class="nav-link text-uppercase text-expanded " href="{% url 'Store' %}">Store</a>
           </li>
-          <li class="nav-item px-lg-4 {% if request.path == '/Contact/'%} active {% endif %}">
+          <li class="nav-item px-lg-4 {% if request.path == '/Contacts/'%} active {% endif %}">
             <a class="nav-link text-uppercase text-expanded" href="{% url 'Contact' %}">Contact</a>
           </li>
           <li class="nav-item px-lg-4 {% if request.path == '/Blog/'%} active {% endif %}">
