--- a/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/static/ProjectWebMinimarketApp/css/gestion.css
+++ b/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/static/ProjectWebMinimarketApp/css/gestion.css
@@ -29,7 +29,7 @@
   border: 1px solid black;
   border-radius: 10px;
   padding: 15px;
-  background-color: aqua;
+  background-color: rgb(85, 97, 97);
   /*Setting margin: auto for the left and right margins instructs the browser 
   to equally distribute the remaining space on both sides of the element. 
   Since width is the half of all the space available, margin auto takes the left and right to the center*/
