Working on Cart class and adding a widget

--- a/MiniMarketPaul_Django/MiniMarket/StoreApp/templates/StoreApp/store.html
+++ b/MiniMarketPaul_Django/MiniMarket/StoreApp/templates/StoreApp/store.html
@@ -6,6 +6,11 @@
 {% block content%}
   
 <div class="container">
+
+  <div style="float:right;">
+    {% include 'StoreApp/Cart_app/widget.html'%}
+  </div>
+
   <div class="row">
     {% for Product in Products %}
     <!--Displaying based on 3 cols, then it goes to the next row-->
@@ -13,10 +18,16 @@
     <div class="col-md-3 mb-4">
       <div class="card" style="width: 100%; margin: 5px 5px;">
         <img src="{{Product.Image.url}}" class="card-img-top" alt="Card image cap">
+        
         <div class="card-body" style="text-align: center;">
             <h7 class="card-title">{{Product.Name}}</h7>
             <p class="card-text">{{Product.Price}}</p>
         </div>
+        
+        <div class="card-text text-center" style="margin-bottom: 5px;">
+          <a href="{% url 'Cart:Add' Product.id %}" class="btn btn-success">Add To Cart</a>
+        </div>
+
       </div>
     </div>  
     {% endfor %}
