--- a/MiniMarketPaul_Django/MiniMarket/AuthenticationApp/templates/authenticationapp/login.html
+++ b/MiniMarketPaul_Django/MiniMarket/AuthenticationApp/templates/authenticationapp/login.html
@@ -9,7 +9,7 @@
 <form method="POST" action="#" style="color: white;">{% csrf_token %}
   <div style="width:75%; margin:auto; color: white;">
     {{form|crispy}}
-    <button type="submit" class="btn btn-success">Register</button>
+    <button type="submit" class="btn btn-success">Login</button>
   </div>
 </form>
 
