--- a/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/templates/ProjectWebMinimarketApp/base.html
+++ b/MiniMarketPaul_Django/MiniMarket/ProjectWebMinimarketApp/templates/ProjectWebMinimarketApp/base.html
@@ -27,7 +27,14 @@
         <span class="site-heading-lower">Mini Market Paul</span>
       </h1>
 
-
+  <!--User greeting and logout/login-->    
+  <div style="text-align: right;  margin-right:100px; color: white;">
+    {% if user.is_authenticated %}
+      Welcome {{user.username}} <a href="{% url 'Logout'%}" class="btn btn-danger">Logout</a>
+    {% else%}
+      <a href="{% url 'LogIn' %}" class="btn btn-primary">Login</a> <a href="{% url 'authenticate' %}" class="btn btn-success">register</a>
+    {%endif%}
+  </div>    
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
