--- a/MiniMarketPaul_Django/MiniMarket/AuthenticationApp/templates/authenticationapp/login.html
+++ b/MiniMarketPaul_Django/MiniMarket/AuthenticationApp/templates/authenticationapp/login.html
@@ -6,8 +6,19 @@
   {% load crispy_forms_tags %}
 {% block content%}
 
+<!--"#" means that the form will be submitted to the current URL.-->
 <form method="POST" action="#" style="color: white;">{% csrf_token %}
   <div style="width:75%; margin:auto; color: white;">
+      {% if messages %}
+          <div>
+              {% for message in messages %}
+                  <div class="alert alert-{{ message.tags }}">
+                      {{ message }}
+                  </div>
+              {% endfor %}
+          </div>
+      {% endif %}
+
     {{form|crispy}}
     <button type="submit" class="btn btn-success">Login</button>
   </div>
