--- a/MiniMarketPaul_Django/MiniMarket/StoreApp/templates/StoreApp/store.html
+++ b/MiniMarketPaul_Django/MiniMarket/StoreApp/templates/StoreApp/store.html
@@ -8,7 +8,12 @@
 <div class="container">
 
   <div style="float:right;">
-    {% include 'StoreApp/Cart_app/widget.html'%}
+
+    {% if request.user.is_authenticated %}
+      {% include 'StoreApp/Cart_app/widget.html'%}
+    {% else %}
+      <div class="alert alert-danger text-center">LogIn to see the cart</div>
+    {%endif%}  
   </div>
 
   <div class="row">
